k8s/chapchu-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chapchu
  namespace: chapchu
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: chapchu.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chapchu-api
                port:
                  number: 8080
